@startuml
title RBAC设计图
entity SysUser {
    Long id
    Long dept_id：部门ID
    String username：用户账号
    String password：用户密码
    String nickname：用户昵称
    String avatar：头像
    String phone：手机号
    String gender：性别
    String enabled：状态
    String type：类型
    String remark：备注
    String create_time：创建时间
    String update_time：更新时间
    String create_user：创建人
    String update_user：更新人
}

' 角色
entity SysRole {
    Long id
    String name：角色名称
    String code：标识符
    Integer sort：排序
    String status：状态
    String remark：备注
    String create_time：创建时间
    String update_time：更新时间
    String create_user：创建人
    String update_user：更新人
}
' 菜单
entity SysMenu {
    Long id
    String name：菜单名称
    String code：标识符
    String path：访问路径
    String component：组件路径
    String icon：图标
    Integer type：类型
    Integer sort：排序
    String show_status：显示状态
    String status：状态
}

entity SysDept {
    Long id
    Long parent_id
    String ancestors: 祖籍id列表
    String dept_name:部门名称
    String leader:部门负责人
    String phone:联系电话
    String email:邮箱
    Integer sort:排序
    String status:状态
    String remark:备注
}


' 对应的中间表
entity SysUserRole {
    Long id
    Long user_id：用户id
    Long role_id：角色id
}
entity SysRoleMenu {
    Long id
    Long role_id：角色id
    Long menu_id：菜单id
}
entity SysRoleDept {
    Long dept_id
    Long role_id
}


' 对应关系
SysUser ||--|{ SysUserRole
SysUserRole ||-|{ SysRole
SysRole ||--|{ SysRoleMenu
SysRoleMenu ||-|{ SysMenu
SysUser ||-|| SysDept
SysDept ||-|{ SysRoleDept
SysRole ||-|{ SysRoleDept

}
@enduml
